--- a/ts-route-plan-service/src/main/resources/application.yml
+++ b/ts-route-plan-service/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 spring:
   application:
     name: ts-route-plan-service
+  lifecycle:
+    timeout-per-shutdown-phase: "60s"
+  main:
+    allow-circular-references: true
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 # HTTP Server
 server:
