Update image tag in deployment scripts

--- a/deployment/kubernetes-manifests/k8s-with-jaeger-elasticsearch/ts-deployment-part2.yml
+++ b/deployment/kubernetes-manifests/k8s-with-jaeger-elasticsearch/ts-deployment-part2.yml
@@ -1357,8 +1357,8 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
         - name: ts-route-plan-service
-          image: ssmtariq/ts-route-plan-service:original
-          imagePullPolicy: IfNotPresent
+          image: ssmtariq/ts-route-plan-service:sperf
+          imagePullPolicy: Always
           securityContext:
             privileged: true
           volumeMounts:
