Update deployment scripts with original base image for - ts-train-service - ts-travel2-service

--- a/deployment/kubernetes-manifests/k8s-with-jaeger-elasticsearch/ts-deployment-part2.yml
+++ b/deployment/kubernetes-manifests/k8s-with-jaeger-elasticsearch/ts-deployment-part2.yml
@@ -1756,7 +1756,7 @@ spec:
     spec:
       containers:
         - name: ts-train-service
-          image: ssmtariq/ts-train-service:master
+          image: ssmtariq/ts-train-service:original
           imagePullPolicy: Always
           env:
             - name: OPENTRACING_ENABLED
@@ -1806,7 +1806,7 @@ spec:
     spec:
       containers:
         - name: ts-travel2-service
-          image: ssmtariq/ts-travel2-service:master3
+          image: ssmtariq/ts-travel2-service:original
           imagePullPolicy: Always
           env:
             - name: EXT_REQUESTS
